fixme: 运行会卡死在检测界面

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,24 +7,30 @@ find_package(PXUT-330N)
 project("PXUT-330N" LANGUAGES C ASM CXX)
 
 include_directories(".")
-# aux_source_directory("." PXUT_SRC)
+
 set(
     PXUT_SRC
-    startup.s
+    startup.S
+    globe.c
     main.c
     common.c
     display.c
+    menu.c
     sysdef.c
     ini.c
     gain.c
-    sdcard.c
+    SDcard.c
     armtest.c
     tools.c
+    test.c
+    image_bin.c
+    character_bin.c
+    music_bin.c
 )
 message(STATUS ${PXUT_SRC})
 add_executable(${PROJECT_NAME}  ${PXUT_SRC})
 target_include_directories(${PROJECT_NAME}  PUBLIC ".")
-target_link_libraries(${PROJECT_NAME}  PRIVATE fatfs::fatfs m10era::m10era libgcc::c libgcc::m libgcc::gcc ) #"-T${CMAKE_SOURCE_DIR}/link/ldscript.lds"
+target_link_libraries(${PROJECT_NAME}  PRIVATE fatfs::fatfs m10era::m10era libgcc::c libgcc::m libgcc::gcc)
 target_link_options(${PROJECT_NAME}  PRIVATE -T "${CMAKE_SOURCE_DIR}/link/ldscript.lds")
 target_precompile_headers(${PROJECT_NAME} PUBLIC "gch.h")
 
@@ -43,5 +49,5 @@ add_custom_target(
 add_custom_target(
     flash 
     COMMAND "${CMAKE_SOURCE_DIR}/tools/M10BurnUser" "${CMAKE_BINARY_DIR}/${PROJECT_NAME}.bin" 
-    DEPENDS ${PROJECT_NAME}
+    DEPENDS size
 )
